feat: Implement vertical gearbox item and improve gearbox rendering
- Added TieredVerticalGearboxItem to handle vertical gearbox functionality.
- Updated TieredGearboxBlock to utilize the new vertical item for drops and cloning.
- Registered vertical gearbox items in ModBlocks.
- Enhanced ClientEventHandler to register KineticBlockEntityRenderer compartment for proper rendering.
- Removed Flywheel visualizer for TieredGearbox to ensure casing visibility.
- Fixed CachedBuffers call in TieredKineticBlockEntityRenderer to use the correct compartment.
- Created TieredGearboxVisual for improved visual representation of the gearbox.
- Added unit tests for gearbox model and render data validation.
- Updated build.gradle to include necessary dependencies for testing.